<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:scrollbars="vertical|horizontal" >

    <TextView
        android:id="@+id/infio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/twoActfio"
        android:textColor="@color/Text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/outfio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/indate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/twoActdate"
        android:textColor="@color/Text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/outdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/insex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/twoActsex"
        android:textColor="@color/Text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/outsex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/inposition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/twoActposition"
        android:textColor="@color/Text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/outposition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/inzp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/twoActzp"
        android:textColor="@color/Text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/outzp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/intelephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/twoActtelephone"
        android:textColor="@color/Text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/outtelephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autoLink="phone"
        android:gravity="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/inemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/twoActemail"
        android:textColor="@color/Text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/outemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autoLink="email"
        android:gravity="center"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/twoactsend"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text|textMultiLine"
        android:lines="5"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:textSize="16sp" />

    <Button
        android:id="@+id/twoactbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/send"
        android:textSize="16sp" />

</LinearLayout>